--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jquery": "^3.6.4",
     "node-fetch": "^3.3.1"
